--- a/HomeWork8.html
+++ b/HomeWork8.html
@@ -49,8 +49,8 @@ This assignment added the use of sliders as well as the tabs for jquery UI.
     <link href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel = "stylesheet">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.js"></script>
-    <script src="http://ajax.microsoft.com/ajax/jquery.validate/1.11.1/additional-methods.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.js"></script>
+    <script src="https://ajax.microsoft.com/ajax/jquery.validate/1.11.1/additional-methods.js"></script>
     <script src="js/javaScript.js"></script>
     <script>
     </script>
