--- a/HomeWork8.html
+++ b/HomeWork8.html
@@ -8,6 +8,7 @@ Date Created: 12/9/2019
 Description:
 This assignment added the use of sliders as well as the tabs for jquery UI.
 -->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -46,15 +47,13 @@ This assignment added the use of sliders as well as the tabs for jquery UI.
   </body>
   <!-- All the links used for the jquery and js -->
     <link href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel = "stylesheet">
-    
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.js"></script>
-    <script src="https://ajax.microsoft.com/ajax/jquery.validate/1.11.1/additional-methods.js"></script>
-    <script src="js/javaScript.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-		
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.js"></script>
+    <script src="http://ajax.microsoft.com/ajax/jquery.validate/1.11.1/additional-methods.js"></script>
+    <script src="js/javaScript.js"></script>
     <script>
     </script>
 </html>
+
 
